some fixes in all platforms for imprint/privacy

--- a/theme/n21/views/dataprivacy/privacy.hbs
+++ b/theme/n21/views/dataprivacy/privacy.hbs
@@ -1,4 +1,4 @@
-<div class="section-imprint">
+<div class="section-imprint {{#unless loggedin}}loggedout{{/unless}}">
 	{{#unless loggedin}}
 		<p class=MsoNormal style='margin-bottom:6.0pt;line-height:19.8pt'><b><span
 	style='font-size:18.0pt;color:#373A3C'>Datenschutzerklärung</span></b></p>
@@ -68,28 +68,19 @@
 	auf ein notwendiges Minimum beschränkt. Zur Nutzung der Niedersächsische
 	Bildungscloud sind folgende Angaben erforderlich:</span></p>
 
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Anzeigename</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Vor- und Nachname</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Email-Adresse</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Schule</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:1rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Passwort als
 	Prüfsumme</span></p>
@@ -103,68 +94,47 @@
 	style='font-size:12.0pt;color:#373A3C'>Darüber hinaus werden folgende Daten
 	erfasst:</span></p>
 
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Gruppenmitgliedschaften,
 	z.B. Klasse und Kurse</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Geburtsdatum</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Persönliche
 	Einstellungen</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Zeitstempel, z.B.
 	Erstellung des Nutzer-Accounts, letzter Login</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Selbst hochgeladene
 	und freigegebene Dateien, z.B. Dokumente</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Selbst angelegte und
 	freigegebene Termine, Gruppentermine</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Aufgabenstellungen
 	und deren Bearbeitungen mit Abgabestatus und Feedback</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Zugriffe auf
 	Lerninhalte, Nutzungsdaten der jeweiligen Inhalte und übermitteltes Feedback zu
 	einzelnen Inhalten</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Erstellte
 	Pseudonyme, deren Verwendung und zu substituierende Daten</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Inhalte der
 	Kommunikation aus z.B. Emails und Forenbeiträgen</span></p>
-
-	<p class=MsoNormal style='margin-right:-7.5pt;margin-left:63.8pt;text-indent:
-	-18.0pt;line-height:normal'><span style='font-size:10.0pt;font-family:Symbol;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:1rem;'><span style='font-size:10.0pt;font-family:Symbol;
 	color:#373A3C'>·<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</span></span><span style='font-size:12.0pt;color:#373A3C'>Art, Inhalt und
 	Empfänger/innen von Benachrichtigungen</span></p>
@@ -296,8 +266,9 @@
 	Inhalte-Anbietern anonymisiert ausgewertet und zur Verbesserung ihrer Inhalte
 	und Produkte eingesetzt werden.</span></p>
 
+	<!-- Hidden because document will get updated soon.
 	<p class=MsoNormal style='margin-bottom:12.0pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>Ein Verzeichnis aller Empfänger personenbezogener Daten finden Sie <a href="/other/pdf/Empfänger_personenbezogene_Daten.pdf">hier</a>.</span></p>
+	style='font-size:12.0pt;color:#373A3C'>Ein Verzeichnis aller Empfänger personenbezogener Daten finden Sie <a href="/other/pdf/Empfänger_personenbezogene_Daten.pdf">hier</a>.</span></p> -->
 
 	<p class=MsoNormal style='margin-bottom:6.0pt;line-height:16.5pt'><b><span
 	style='font-size:15.0pt;color:#373A3C'>8. Ihre Rechte</span></b></p>
@@ -313,51 +284,18 @@
 	style='font-size:12.0pt;color:#373A3C'>Ihre Anfrage richten bitte Sie per
 	Email, Fax oder Post an:</span></p>
 
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:12.0pt;
-	margin-left:35.4pt;line-height:normal'><span style='font-size:12.0pt;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span style='font-size:12.0pt;
 	color:#373A3C'>Landesinitiative n-21 Schulen in Niedersachsen Online</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span
 	style='font-size:12.0pt;color:#373A3C'>Schiffgraben 27 </span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><span
 	style='font-size:12.0pt;color:#373A3C'>30159 Hannover</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><u><span
+	<p class=MsoNormal style='line-height:normal;margin-bottom:0.3rem;'><u><span
 	style='font-size:12.0pt;color:#373A3C'>Mail</span></u><span style='font-size:
-	12.0pt;color:#373A3C'>: </span><a href="mailto:info@n-21.de"><span
+	12.0pt;color:#373A3C'>: </span><a href="mailto:info@n-21.de" target="_blank" rel="noopener"><span
 	style='font-size:12.0pt'>info@n-21.de</span></a></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:12.0pt;
-	margin-left:35.4pt;line-height:normal'><u><span style='font-size:12.0pt;
+	<p class=MsoNormal style='line-height:normal;margin-bottom:1rem;'><u><span style='font-size:12.0pt;
 	color:#373A3C'>Telefax</span></u><span style='font-size:12.0pt;color:#373A3C'>:
 	+49 (0)511 3536621-99</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>&nbsp;</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>&nbsp;</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>&nbsp;</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>&nbsp;</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>&nbsp;</span></p>
-
-	<p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
-	margin-left:35.4pt;margin-bottom:.0001pt;line-height:normal'><span
-	style='font-size:12.0pt;color:#373A3C'>&nbsp;</span></p>
 
 </div>
