--- a/theme/n21/views/imprint/imprint.hbs
+++ b/theme/n21/views/imprint/imprint.hbs
@@ -1,6 +1,6 @@
-<div class="section-imprint">
+<div class="section-imprint {{#unless loggedin}}loggedout{{/unless}}">
 	{{#unless loggedin}}
-		<p class=MsoNormal><b><span style='font-size:18.0pt;line-height:107%;
+		<p class=MsoNormal><b><span style='font-size:20.0pt;line-height:110%;
 	color:#A8D9EE'>Impressum</span></b></p>
 	{{/unless}}
 
@@ -22,8 +22,8 @@
 
 	<p class=MsoNormal style='margin-bottom:12.0pt;line-height:normal'><u><span
 	style='font-size:12.0pt;color:#373A3C'>Email</span></u><span style='font-size:
-	12.0pt;color:#373A3C'>: info@n-21.de<br>
-	<u>Internet</u>: niedersachsen.cloud<br>
+	12.0pt;color:#373A3C'>: <a href="mailto:info@n-21.de" target="_blank" rel="noopener">info@n-21.de</a><br>
+	<u>Internet</u>: <a href="https://niedersachsen.cloud" target="_blank" rel="noopener">https://niedersachsen.cloud</a><br>
 	<u>Telefon</u>: +49 (0)511 3536621-41<br>
 	<u>Telefax</u>: +49 (0)511 3536621-99</span></p>
 
