--- a/theme/open/views/dataprivacy/privacy.hbs
+++ b/theme/open/views/dataprivacy/privacy.hbs
@@ -1,4 +1,4 @@
-<div class="section-imprint">
+<div class="section-imprint {{#unless loggedin}}loggedout{{/unless}}">
 	{{#unless loggedin}}
 		<h4>Datenschutzerklärung</h4>
 	{{/unless}}
