--- a/theme/brb/views/dataprivacy/privacy.hbs
+++ b/theme/brb/views/dataprivacy/privacy.hbs
@@ -1,4 +1,4 @@
-<div class="section-imprint">
+<div class="section-imprint {{#unless loggedin}}loggedout{{/unless}}">
 	{{#unless loggedin}}
 		<h4>Datenschutzerklärung</h4>
 	{{/unless}}
@@ -67,14 +67,36 @@
 	</h5>
 	<p>Bei jedem Besuch der Schul-Cloud Brandenburg werden von Ihrem Internetbrowser automatisch Nutzungsdaten übermittelt und in sogenannten Logdateien ausschließlich pseudonymisiert gespeichert, sodass keine personenbezogenen Daten wie IP-Adressen enthalten sind.</p>
 	<h5>
-		<strong>6. Weitergabe von Daten</strong>
+		<strong>6. Webanalysen mit Matomo</strong>
+	</h5>
+	<p>Um die HPI Schul-Cloud kontinuierlich nutzungsgerecht zu verbessern, verwenden wir die Open Source
+		Webanalyse-Software Matomo. Über diese erhalten wir Berichte über die Anzahl der Nutzer/innen. Die Analysen erfolgen
+		ohne Weitergabe von Daten an Dritte.</p>
+	<p>Matomo verwendet Cookies, die auf Ihrem Computer gespeichert werden und die Analyse der HPI Schul-Cloud-Nutzung
+		ermöglichen. Die durch Cookies erzeugten Informationen über die Nutzung der HPI Schul-Cloud werden auf unserem
+		Server gespeichert. Wir weisen darauf hin, dass auf unserer Website Matomo implementiert und die Funktion „IP
+		anonymisieren“ verwendet wird. Dies ermöglicht uns eine anonyme Erfassung Ihrer IP-Adresse (IP-Maskierung). Ihre
+		IP-Adresse wird lediglich in gekürzter Form pseudonymisiert gespeichert. Eine Zusammenführung mit anderen Daten
+		findet nicht statt, sodass auch keine Rückschlüsse auf Ihre Identität möglich sind. Wenn Sie von der Speicherung von
+		Cookies abweichen möchten, können Sie diese in Ihrem Browser deaktivieren, auf bestimmte Webseiten beschränken oder
+		Ihren Browser so einstellen, dass Sie informiert werden, sobald ein Cookie gesendet wird. Cookies können Sie
+		jederzeit von der Festplatte Ihres Computers löschen.</p>
+	<p>Darüber hinaus können Sie dem Setzen von Matomo-Cookies widersprechen. Ihr Widerspruch wird in Form eines
+		Opt-out-Cookies gespeichert. Bitte beachten Sie, dass beim Löschen sämtlicher Cookies auf Ihrem Computer auch dieses
+		Opt-out-Cookie gelöscht wird. Wenn Sie die anonyme Datenerfassung durch das Webanalyse-Tool Matomo weiterhin
+		ablehnen möchten, müssen Sie das Opt-out-Cookie anschließend erneut setzen. Das Opt-out-Cookie wird pro Browser und
+		Computer gesetzt. Wenn Sie die HPI Schul-Cloud von der Schule und zu Hause aus oder über verschiedene Browser
+		besuchen, müssen Sie den Opt-out-Cookie auf den unterschiedlichen Computern bzw. in den verschiedenen Browsern
+		aktivieren. Weitere Informationen über Matomo erhalten Sie unter: <a href="https://matomo.org/" target="_blank" rel="noopener">https://Matomo.org/</a>.</p>
+	<h5>
+		<strong>7. Weitergabe von Daten</strong>
 	</h5>
 	<p>Ihre persönlichen Daten werden vom HPI geschützt. Das HPI gibt keine personenbezogenen Daten an Dritte weiter, es sei denn, die Weitergabe erfolgt in Erfüllung einer gesetzlichen Verpflichtung (z. B. im Rahmen von strafrechtlichen Ermittlungen). In diesem Falle werden nur solche Informationen weitergegeben, zu denen Ihre Schule und das HPI gesetzlich verpflichtet sind.</p>
 	<p>Aus technischen oder organisatorischen Gründen behält sich das HPI vor, Hosting-Dienstleistungen an Subunternehmer zu vergeben. In diesem Fall werden die Nutzer/innen hierüber in Kenntnis gesetzt. Das HPI verpflichtet sich dazu, die hinzugezogenen Subunternehmer sorgfältig auszuwählen und so dafür Sorge zu tragen, dass es zu keiner Schwächung des Datenschutzniveaus kommt.</p>
 	<p>Für die Nutzung interaktiver Inhalte externer Anbieter (z. B. Schulbuchverlage) werden Pseudonyme eingesetzt, die den Inhalte-Anbietern keinerlei Rückschlüsse auf die realen Nutzer/innen der Schul-Cloud Brandenburg zulassen. Die pseudonymisierten Daten über die Nutzung digitaler Angebote (bspw. Testfragen) können von den Inhalte-Anbietern anonymisiert ausgewertet und zur Verbesserung ihrer Inhalte und Produkte eingesetzt werden.</p>
 	<p>Ein Verzeichnis aller Empfänger personenbezogener Daten finden Sie <a href="https://s3.hidrive.strato.com/schul-cloud-hpi/brb/Dokumente/Empfaenger.pdf" target="_blank" rel="noopener">hier</a>.</p>
 	<h5>
-		<strong>7. Ihre Rechte</strong>
+		<strong>8. Ihre Rechte</strong>
 	</h5>
 	<p>Auf Grundlage der DS-GVO haben Sie das Recht auf Auskunft, Berichtigung, Sperrung oder Löschung Ihrer gespeicherten
 		Daten.</p>
