--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -19,7 +19,7 @@
 </div>
 <div class="form-group">
     <label>Schuljahr</label>
-    <select class="form-control" name="schoolYear">
+    <select class="form-control" name="schoolYear" data-placeholder="Schuljahr auswählen" data-force-value="true">
         {{#each years}}
             <option value="{{this._id}}">{{this.name}}</option>
         {{/each}}
