--- a/views/administration/forms/form-systems.hbs
+++ b/views/administration/forms/form-systems.hbs
@@ -9,7 +9,9 @@
     <label>Typ des Systems</label>
     <select name="type" required data-placeholder="Anbieter auswählen" class="sso-type-selection" >
         {{#each availableSSOTypes}}
-            <option value="{{this.value}}" {{#if this.selected}}selected{{/if}}>{{this.label}}</option>
+            {{#unless this.hidden}}
+                <option value="{{this.value}}" {{#if this.selected}}selected{{/if}}>{{this.label}}</option>
+            {{/unless}}
         {{/each}}
     </select>
 </div>
