--- a/static/styles/administration/school.scss
+++ b/static/styles/administration/school.scss
@@ -23,3 +23,42 @@
 label {
   margin-bottom: 0rem;
 }
+
+#ldapschoolyearadditionalinfo {
+  display: none;
+}
+
+.wizard-card {
+  padding: 20px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding-bottom: 50px;
+  .progressbar {
+    margin-top: 20px;
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+  .stages {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  .btn-delete-course {
+    margin-right: 10px;
+  }
+  .final-step {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    .image-wrapper {
+      padding: 30px;
+      opacity: 0.8;
+    }
+    .image {
+      width: 250px;
+    }
+    .course-features {
+      margin-top: 15px;
+    }
+  }
+}
