--- a/views/administration/forms/form-terminate-school-year.hbs
+++ b/views/administration/forms/form-terminate-school-year.hbs
@@ -1,6 +1,6 @@
  {{#if schoolMaintanance.schoolUsesLdap}}
- <p>Das Schuljahr {{school.currentYear.name}} wird beendet und die Transferphase zum neuen Schuljahr beginnt. <strong>Dieser Schritt kann nicht rückgängig gemacht werden.</strong> Lehrer können in dieser Zeit keine neuen Kurse und Klassen anlegen.</p>
-<p>Die Synchronisierung von LDAP-Stammdaten wird während der Transferphase unterbrochen. Somit werden Nutzerdaten und Klassen (sofern verwendet) nicht mehr über LDAP aktualisiert. Der Login mit bereits synchronisierten Login-Daten ist weiterhin möglich.</p>
+ <p>Das Schuljahr {{school.currentYear.name}} wird beendet und die Transferphase zum neuen Schuljahr beginnt. <strong>Dieser Schritt kann nicht rückgängig gemacht werden.</strong> Es können in dieser Zeit keine Klassen und Nutzer angelegt oder geändert werden.</p>
+<p>Die Synchronisierung von LDAP-Stammdaten wird während der Transferphase unterbrochen. Somit werden Nutzerdaten und Klassen (sofern verwendet) nicht mehr über LDAP aktualisiert. Der Login mit bereits synchronisierten Login-Daten ist weiterhin möglich. Passwortänderungen im LDAP während des Logins werden ebenfalls berücksichtigt.</p>
 {{else}}
 <p>Das Schuljahr {{school.currentYear.name}} wird beendet und das neue Schuljahr {{schoolMaintanance.nextYear.name}} wird eingeläutet. Dadurch können keine weiteren Kurse und Klassen im alten Schuljahr {{school.currentYear.name}} mehr erstellt werden, sondern nur im neuen Schuljahr {{schoolMaintanance.nextYear.name}}. <strong>Dieser Schritt kann nicht rückgängig gemacht werden.</strong></p>
 {{/if}}
