--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -46,7 +46,7 @@
         </p>
         <center class="form-group">
             <button onclick="window.print()" class="btn btn-primary noprint" href="/administration/students">
-                <i class="fa fa-print"></i> Schüleranleitungen und Liste drucken
+                <i class="fa fa-print"></i> Liste mit Zugangsdaten drucken
             </button>
         </center>
         {{#unless single}}
