--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -2,6 +2,7 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/coursesOverview.js" type="text/javascript" defer></script>
+        <script src="/scripts/tabbar.js" type="text/javascript" defer></script>
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/courses/course.css"/>
@@ -9,31 +10,81 @@
 
     {{#content "page"}}
         <section class="section-courses">
-                {{#if courses}}
-                    {{> 'dashboard/components/card_section' section-id="courses" title="" content=courses link-text="Öffnen" additionalInfoName="memberCount"}}
-                {{else}}
-                    <div class="col-xs-12">
-                        <p class="text-muted">
-                            <i class="fa fa-frown-o"></i>
-                            <span>Noch keine Kurse</span>
-                        </p>
-                    </div>
-                {{/if}}
+            <div class="course-card">
+                <div class="tabContainer" data-active-tab={{activeTab}}>
+                <div class="tabs" data-max-width="1024">
+                    <button class="tab" data-tab="js-active">
+                        <span class="text">Aktuelle Kurse <span class="count-badge" data-badge="{{ total.active }}"/></span>
+                    </button>
+                    <button class="tab" data-tab="js-archived">
+                        <span class="text">Archivierte Kurse <span class="count-badge" data-badge="{{ total.archvied }}"/></span>
+                    </button>
+                </div>
+                </div>
+                <div class="sectionsContainer">
+                    <div class="sections">
+                        <!-- Aktuelle Kurse -->
+                        <div class="section" data-section="js-active">
+                            {{#if total.active}}
+                                {{> 'dashboard/components/card_section' section-id="activeCourses" title="" content=activeCourses link-text="Öffnen" additionalInfoName="memberCount"}}
+                            {{else}}
+                                <div class="col-xs-12">
+                                    <p class="text-muted">
+                                        <i class="fa fa-frown-o"></i>
+                                        <span>Zum neuen Schuljahr haben wir deine Kurse im....</span>
+                                    </p>
+                                </div>
+                            {{/if}}
 
-                {{#userHasPermission "COURSE_EDIT"}}
-                    <section>
-                        <div class="section-title mb-2"><h2 class="h4">Meine Vertretungen</h2></div>
-                        {{#if ../substitutionCourses}}
-                            {{> 'dashboard/components/card_section' section-id="substitutionCourses" title="" content=../substitutionCourses link-text="Öffnen" additionalInfoName="memberCount"}}
-                        {{else}}
-                            <div class="col-xs-12">
-                                <p class="text-muted">
-                                    <span>Keine Vertretungen</span>
-                                </p>
-                            </div>
-                        {{/if}}
-                    </section>
-                {{/userHasPermission}}
+                            {{#userHasPermission "COURSE_EDIT"}}
+                                <section>
+                                    <div class="section-title mb-2"><h2 class="h4">Meine Vertretungen</h2></div>
+                                    {{#if ../activeSubstitutions}}
+                                        {{> 'dashboard/components/card_section' section-id="activeSubstitutions" title="" content=../activeSubstitutions link-text="Öffnen" additionalInfoName="memberCount"}}
+                                    {{else}}
+                                        <div class="col-xs-12">
+                                            <p class="text-muted">
+                                                <span>Keine Vertretungen</span>
+                                            </p>
+                                        </div>
+                                    {{/if}}
+                                </section>
+                            {{/userHasPermission}}
+
+                        </div>
+                        <!--- Archivierte Kurse -->
+                        <div class="section" data-section="js-archived">
+                            {{#if total.archived}}
+                                {{> 'dashboard/components/card_section' section-id="archievedCourses" title="" content=archivedCourses link-text="Öffnen" additionalInfoName="memberCount"}}
+                            {{else}}
+                                <div class="col-xs-12">
+                                    <p class="text-muted">
+                                        <i class="fa fa-frown-o"></i>
+                                        <span>Schaffe platz und setze ein Enddatum in deinen Kursen um den Kopf für nächstes Jahr frei zu haben</span>
+                                    </p>
+                                </div>
+                            {{/if}}
+
+                            {{#userHasPermission "COURSE_EDIT"}}
+                                <section>
+                                    <div class="section-title mb-2"><h2 class="h4">Meine Vertretungen</h2></div>
+                                    {{#if ../archivedSubstitutions}}
+                                        {{> 'dashboard/components/card_section' section-id="archivedSubstitutions" title="" content=../archivedSubstitutions link-text="Öffnen" additionalInfoName="memberCount"}}
+                                    {{else}}
+                                        <div class="col-xs-12">
+                                            <p class="text-muted">
+                                                <span>Keine Vertretungen</span>
+                                            </p>
+                                        </div>
+                                    {{/if}}
+                                </section>
+                            {{/userHasPermission}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                
 
                 {{#userHasPermission "COURSE_EDIT"}}
                 <div class="col-xs-12">
