klonen to duplizieren

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -32,7 +32,7 @@
             <i class="fa fa-share" aria-hidden="true"></i> Kurs teilen
           </a>
           <a href="/courses/{{../_id}}/copy" class="dropdown-item">
-            <i class="fa fa-clone" aria-hidden="true"></i> Kurs klonen
+            <i class="fa fa-clone" aria-hidden="true"></i> Kurs duplizieren
           </a>
         </div>
       </div>
