--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -3,6 +3,7 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/coursesOverview.js" type="text/javascript" defer></script>
         <script src="/scripts/tabbar.js" type="text/javascript" defer></script>
+        <script src="/scripts/topic.js" type="text/javascript" defer></script>
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/courses/course.css"/>
@@ -17,7 +18,7 @@
                         <span class="text">Aktuelle Kurse <span class="count-badge" data-badge="{{ total.active }}"/></span>
                     </button>
                     <button class="tab" data-tab="js-archived">
-                        <span class="text">Archivierte Kurse <span class="count-badge" data-badge="{{ total.archvied }}"/></span>
+                        <span class="text">Archivierte Kurse <span class="count-badge" data-badge="{{ total.archived }}"/></span>
                     </button>
                 </div>
                 </div>
@@ -31,7 +32,7 @@
                                 <div class="col-xs-12">
                                     <p class="text-muted">
                                         <i class="fa fa-frown-o"></i>
-                                        <span>Zum neuen Schuljahr haben wir deine Kurse im....</span>
+                                        <span>Kurse, deren Enddatum erreicht ist, findest du  <a href="?activeTab=archived">im Archive</a>. Du kannst archivierte Kurse duplizieren und als Vorlage für das neue Schuljahr verwenden, einen Kurs importieren oder einen ganz neuen Kurs erstellen.</span>
                                     </p>
                                 </div>
                             {{/if}}
@@ -60,7 +61,7 @@
                                 <div class="col-xs-12">
                                     <p class="text-muted">
                                         <i class="fa fa-frown-o"></i>
-                                        <span>Schaffe platz und setze ein Enddatum in deinen Kursen um den Kopf für nächstes Jahr frei zu haben</span>
+                                        <span>Du hast noch keine archivierten Kurse</span>
                                     </p>
                                 </div>
                             {{/if}}
